# lib66

./: ChangeLog  LICENSE.md  README.md  meson.build  meson.options  work.sh
extras/notes/: README
extras/wraps/: lib66.wrap
include/: c_macros.h  cpp_types.hpp  lib66-config.h.in  lib66.hpp  lib_build_macros.h  meson.build  platform_macros.h
src/: lib66.cpp  meson.build
tests/: README  meson.build  platform_macros.cpp
