#*****************************************************************************
# meson.options (lib66)
#-----------------------------------------------------------------------------
##
# \file        meson.options
# \library     lib66
# \author      Chris Ahlstrom
# \date        2025-01-30
# \updates     2025-01-30
# \license     $XPC_SUITE_GPL_LICENSE$
#
#  This file is part of the "lib66" library.
#
#  Note that, as of version 1.1, Meson uses "meson.options" in preference to
#  "meson_options.txt".  Hurray!
#
#  Options for lib66.
#
#-----------------------------------------------------------------------------

#-----------------------------------------------------------------------------
#  We do not need to append version numbers to the documents directory.
#-----------------------------------------------------------------------------

option('docdir',
   type : 'string',
   value : 'share/doc/lib66',
   description : 'Directory where Lib66 documentation is installed.',
   yield : true
)

#-----------------------------------------------------------------------------
# This option is checked only if lib66 is not used as a subproject.
#-----------------------------------------------------------------------------

option('enable-tests',
   type : 'boolean',
   value : true,
   description : 'Build the test program(s)'
)

#****************************************************************************
# meson.options (lib66)
#----------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=meson
#----------------------------------------------------------------------------
