#*****************************************************************************
# meson.build (lib66/src)
#-----------------------------------------------------------------------------
##
# \file        src/meson.build
# \library     lib66
# \author      Chris Ahlstrom
# \date        2025-01-30
# \updates     2025-01-30
# \license     $XPC_SUITE_GPL_LICENSE$
#
#  This file is part of the "lib66" library. See the top-level meson.build
#  file for license information.
#
#  Here we locate the library source-code files.
#
#-----------------------------------------------------------------------------

liblib66_sources += files('lib66.cpp')

#****************************************************************************
# meson.build (lib66/src)
#----------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=meson
#----------------------------------------------------------------------------
