#*****************************************************************************
# meson.build (lib66/tests)
#-----------------------------------------------------------------------------
##
# \file        tests/meson.build
# \library     lib66
# \author      Chris Ahlstrom
# \date        2022-06-22
# \updates     2024-10-30
# \license     $XPC_SUITE_GPL_LICENSE$
#
#  This file is part of the "lib66" library. See the top-level meson.build
#  file for license information.
#
#-----------------------------------------------------------------------------

platform_macros_exe = executable(
   'platform_macros',
   sources : [ 'platform_macros.cpp' ],
   dependencies : [ liblib66_dep ]
   )

test('C++ Platform Macros', platform_macros_exe)
   
#****************************************************************************
# meson.build (lib66/tests)
#----------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=meson
#----------------------------------------------------------------------------

